integrated commit fe4728488b673837354c3bbda97c9cc39849e924 from ktaranov/ecmergeru together with a few fixes

--- a/ru/ellie-filehisto-common.po
+++ b/ru/ellie-filehisto-common.po
@@ -45,9 +45,7 @@ msgstr "'$0' не действительно"
 msgid ""
 "A newer version exists for this platform but requires a newer OS or toolkit "
 "version"
-msgstr ""
-"Новая версия существует для данной платформы но требуется более новая ОС или "
-"набор инструментов"
+msgstr "Новая версия существует для данной платформы но требуется более новая ОС или набор инструментов"
 
 msgid "A&pply"
 msgstr "Применить"
@@ -89,7 +87,7 @@ msgid "Backslash"
 msgstr "Обратный слэш"
 
 msgid "Backspace"
-msgstr "Пробел"
+msgstr "Возврат на одну позицию"
 
 msgid "Basic"
 msgstr "Основной"
@@ -197,8 +195,7 @@ msgid ""
 "Error while launching the following command: $0. Please see below for "
 "details.\n"
 "$1"
-msgstr ""
-"Ошибка при запуке следующей комманды: $0. Детали ошибки смотрите ниже \n"
+msgstr "Ошибка при запуке следующей комманды: $0. Детали ошибки смотрите ниже \n"
 "$1"
 
 msgid "Escape special character"
@@ -241,16 +238,15 @@ msgid ""
 "Input the name of the new profile.\n"
 "The new profile will be initially set to a copy of the last selected profile."
 msgstr ""
-"Введите имя для ного профайла.\n"
-"Новый профайл будет изначально создан как копия последнего выбранного "
-"профайла."
+"Введите имя для нового профайла.\n"
+"Новый профайл будет изначально создан как копия последнего выбранного профайла."
 
 msgid ""
 "It seems that this platform is not supported anymore, though there is a "
 "newer version."
 msgstr ""
-"Скорее всего данная платформа более не поддерживается, хотя существует "
-"болееновая версия"
+"Скорее всего данная платформа более не поддерживается, хотя существует более"
+"новая версия"
 
 msgid "Keeping existing"
 msgstr "Сохранить действующий"
@@ -292,8 +288,7 @@ msgid "No common action available"
 msgstr "Никаких общих действий не требуется"
 
 msgid "No default application can open $0 extension"
-msgstr ""
-"Ни одно из приложений по умолчанию не может открыть $0 данное расширение"
+msgstr "Ни одно из приложений по умолчанию не может открыть $0 данное расширение"
 
 msgid "No default application can open $0 file type"
 msgstr "Ни одно из приложений по умолчанию не может открыть $0 тип файла"
@@ -339,7 +334,7 @@ msgid "Proxy authentication"
 msgstr "Прокси аутентификация"
 
 msgid "Remove"
-msgstr "Удалать"
+msgstr "Удалить"
 
 msgid "Remove all"
 msgstr "Удалить все"
@@ -357,10 +352,10 @@ msgid "SCC Tool"
 msgstr "SCC инструмент"
 
 msgid "SCC tool info file with bad version number"
-msgstr ""
+msgstr "Информационный файл SCC инструмента с некорректной версией"
 
 msgid "SCC tool info file with not well-formed XML."
-msgstr ""
+msgstr " Информационный файл SCC инструмента с невалидным XML."
 
 msgid "S_kip"
 msgstr "Пропустить"
@@ -427,8 +422,8 @@ msgid ""
 "The %s proxy did not accept current login or password information, please "
 "enter new information below:"
 msgstr ""
-"%s прокси не принимает текущий логин или пароль, пожалуйста введите новые "
-"данные ниже:"
+"%s прокси не принимает текущий логин или пароль, пожалуйста "
+"введите новые данные ниже:"
 
 msgid ""
 "The given profile name is already in use.\n"
@@ -452,9 +447,7 @@ msgid "The server does not support this feature"
 msgstr "Сервер не поддерживает данный функционал"
 
 msgid "There is no path yet for tool $0 in Preferences/Scc Tools panel."
-msgstr ""
-"До сих пор не указан путь для инструмента $0 в Настройки/Scc панели "
-"инструментов."
+msgstr "До сих пор не указан путь для инструмента $0 в Настройки/Scc панели инструментов."
 
 msgid "Time"
 msgstr "Время"
@@ -532,15 +525,13 @@ msgid "_Yes"
 msgstr "Да"
 
 msgid "a setting keyword may not be empty"
-msgstr ""
+msgstr "ключевое слово не может быть пустым"
 
 msgid "cannot find selected text in tree list view"
 msgstr "выбранный текст не найден в списке"
 
 msgid "cannot set more than one of: date, label or revision in same context"
-msgstr ""
-"невозможно задать более одного свойства: дату, название или ревизию в одном "
-"и том же контексте"
+msgstr "невозможно задать более одного свойства: дату, название или ревизию в одном и том же контексте"
 
 msgid "copy_file: source not valid or heterogeneous"
 msgstr "copy_file: источник не правильный или  не однозначный"
