integrated commit 400e532317 from Konstantin Taranov

--- a/ru/ellie-filehisto-guimerge.po
+++ b/ru/ellie-filehisto-guimerge.po
@@ -2979,7 +2979,7 @@ msgid "Next Difference Inside Line"
 msgstr "Следующее отличие внутри строки"
 
 msgid "Next Unresolved Conflict"
-msgstr "Следующий Неразрешимый Конфликт"
+msgstr "Следующий Неразрешенный Конфликт"
 
 msgid "Next conflict"
 msgstr "Следующий конфликт"
@@ -2988,7 +2988,7 @@ msgid "Next difference"
 msgstr "Следующее отличие"
 
 msgid "Next unresolved conflict"
-msgstr "Следующий неразрешимый конфликт"
+msgstr "Следующий неразрешенный конфликт"
 
 msgid "No"
 msgstr "Нет"
@@ -3313,7 +3313,7 @@ msgid ""
 msgstr ""
 "Пожалуйста, введите файлы даты, чтобы установить для всех файлов как 'изменение[|создание[|"
 "доступа]]':\n"
-"(using a format such as YYYY/MM/DD HH:MM:SS[.mmmm])"
+"(используя формат такой как YYYY/MM/DD HH:MM:SS[.mmmm])"
 
 msgid ""
 "Please enter the poduct key as stated\n"
@@ -5692,8 +5692,8 @@ msgid ""
 "missing input files (with --doc-settings or 2/3 files or directories).\n"
 "Type merge --help for more help."
 msgstr ""
-"пропущен ввод файлов.\n"
-"Наберите слияние --help для подробной помощи."
+"пропущен ввод файлов (с --doc-settings или 2/3 файлы или директории).\n"
+"Наберите merge --help для подробной помощи."
 
 msgid "missing source"
 msgstr "пропущен источник"
